--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,7 @@ span {
   background: #fff;
   z-index: 997;
   transition: all 0.5s ease;
+  height: 85px;
   padding: 20px 0;
 }
 
@@ -323,7 +324,9 @@ span {
 }
 
 .navbar-mobile ul {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
   position: absolute;
   top: 55px;
   right: 15px;
@@ -338,7 +341,7 @@ span {
 
 .navbar-mobile a {
   padding: 10px 20px;
-  font-size: 15px;
+  font-size: 20px;
   color: #222;
 }
 
@@ -391,7 +394,7 @@ span {
   background: url(../img/hero-bg.png) center bottom no-repeat;
   background-size: 100%;
   position: relative;
-  margin-top: 40px;
+  margin-top: 85px;
 }
 
 @media (min-width: 1025px) {
@@ -446,8 +449,14 @@ span {
 }
 
 #hero img {
-  max-width: 95%;
+  max-width: 45%;
   margin-bottom: 30px;
+}
+
+@media (max-width: 1024px) {
+  #hero img {
+    max-width: 95%;
+  }
 }
 
 #hero .btn-get-started {
@@ -540,7 +549,6 @@ section {
   font-size: 15px;
   font-weight: 300;
   margin-bottom: 30px;
-  text-transform: capitalize;
 }
 
 /*--------------------------------------------------------------
@@ -1468,6 +1476,7 @@ section {
 
 form label {
   color: #626262;
+  margin-bottom: 8px;
 }
 
 .thanks-end {
@@ -1498,7 +1507,6 @@ form label {
 @media (max-width: 768px) {
   #adobe-cop-form .form-group label {
     overflow-wrap: anywhere;
-    word-break: break-all;
   }
 
   #hero .hero-container h2 {
